syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.asc.common.application.proto";
option java_outer_classname = "AuthorizationServiceProto";

service AuthorizationService {
  rpc RevokeConsents (RevokeConsentsRequest) returns (RevokeConsentsResponse) {}
  rpc GetConsents (GetConsentsRequest) returns (GetConsentsResponse) {}
}

message RevokeConsentsRequest {
  string client_id = 1;
  string principal_id = 2;
}

message RevokeConsentsResponse {
  bool success = 1;
}

message GetConsentsRequest {
  string principal_id = 1;
  optional string last_modified_at = 2;
  int32 limit = 3;
}

message GetConsentsResponse {
  repeated Consent consents = 1;
  optional string last_modified_at = 2;
}

message Consent {
  string client_id = 1;
  repeated string scopes = 2;
  optional string modified_at = 3;
}
